--- a/css/sass/general.sass
+++ b/css/sass/general.sass
@@ -4,11 +4,11 @@
 /*@import tools/flexgrid*/
 @import tools/grid
 @import tools/fonts
-@import tools/slick
-@import tools/slick-theme
+/*@import tools/slick*/
+/*@import tools/slick-theme*/
 /*@import tools/font-awesome*/
-@import tools/fancybox
-@import tools/hamburgers
+/*@import tools/fancybox*/
+/*@import tools/hamburgers*/
 
 
 @import base/vars
