--- a/css/sass/base/settings.sass
+++ b/css/sass/base/settings.sass
@@ -7,6 +7,12 @@ body
 	font-family: 'Helvetica Neue LT Std'
 	font-size: 16.67px 
 	font-weight: 300 
+	
+	@media (max-width: 575px)
+		font-size: 14px
+		
+	@media (max-width: 420px)
+		font-size: 13px 
 
 
 // other overall settings
