--- a/css/sass/modules/controls.sass
+++ b/css/sass/modules/controls.sass
@@ -30,10 +30,11 @@
 
 .form-control
 	display: block
-	font-weight: 200
+	font-weight: 500
 	border: 0
 	height: 40px
 	width: 100% 
+	border-bottom: 1px solid #E3E3E3
 	
 
 .form-group
@@ -56,7 +57,7 @@
 			i
 				width: 12px
 				height: 12px
-				border: 1px solid #000
+				border: 1px solid #E3E3E3
 				position: absolute
 				left: 0
 				top: 3px
@@ -66,3 +67,4 @@
 			background-size: 8px  
 			background-position: 50% 50% 
 			background-repeat: no-repeat 
+			border-color: #000
