--- a/css/sass/general.sass
+++ b/css/sass/general.sass
@@ -7,7 +7,7 @@
 /*@import tools/slick*/
 /*@import tools/slick-theme*/
 /*@import tools/font-awesome*/
-/*@import tools/fancybox*/
+@import tools/fancybox
 /*@import tools/hamburgers*/
 
 
