--- a/css/sass/modules/footer.sass
+++ b/css/sass/modules/footer.sass
@@ -1,11 +1,12 @@
 .footer
 	background-color: #403E3B
 	color: #fff
-	padding: 25px 0 10px 
+	padding: 0 0 10px 
 	font-size: 10.4px 
 	
 	&-top
 		margin-bottom: 15px 
+		padding-top: 25px 
 
 		p:not(:last-child)
 			margin-bottom: 1em 
@@ -14,6 +15,20 @@
 	&-bottom
 		text-align: center
 		font-size: 8.3px 
+		
+
+	.footer-icons
+		padding: 5px 15px
+		background-color: #1E1D1B
+		display: flex
+		align-items: center
+		justify-content: center
+		height: 45px
+		
+		img
+			display: block
+			max-height: 30px 
+			margin: 0 15px
 		
 
 
