--- a/css/sass/modules/controls.sass
+++ b/css/sass/modules/controls.sass
@@ -35,6 +35,9 @@
 	height: 40px
 	width: 100% 
 	border-bottom: 1px solid #E3E3E3
+	padding: 0 5px
+	background-color: transparent
+	color: inherit 
 	
 
 .form-group
