--- a/css/sass/modules/offer.sass
+++ b/css/sass/modules/offer.sass
@@ -1,13 +1,22 @@
 .offer
 	height: auto
-	min-height: calc(100% - 175px) 
+	min-height: calc(100% - 224px) 
 	+flex($d: column, $ai: center, $j: center)
 	
-	background-image: url("../images/offer-main.jpg")
 	background-position: 50% 50%
 	background-size: cover
 	background-repeat: no-repeat 
 	padding: 50px 0
+	overflow: hidden
+	
+	&.litecoin
+		background-image: url("../images/offer-litecoin.jpg") 
+	
+	&.bitcoin
+		background-image: url("../images/offer-bitcoin.jpg")
+		
+	&.ethereum
+		background-image: url("../images/offer-ethereum.jpg")
 	
 
 	.container
@@ -21,11 +30,30 @@
 			
 			@media (max-width: 991px)
 				max-width: 600px 
+				
+
+	@media (min-width: 1200px)
+		&.style-2
+			.inner
+				&:after
+					content: ''
+					position: absolute
+					left: -100px
+					right: -100px
+					height: 600px
+					position: absolute
+					top: 50%
+					transform: translateY(-50%)
+					box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.25)
+					background-position: 50% 50%
+					background-repeat: no-repeat 
+					background-size: cover 
+				
 	
 
 	.bonus-offer
 		width: 480px
-		background-color: rgba(255, 255, 255, .7)
+		background-color: rgba(255, 255, 255, .9)
 		padding: 15px 25px
 		box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.25)
 		position: relative
@@ -40,7 +68,7 @@
 		
 
 		.logo
-			width: 140px
+			width: 200px
 			margin-bottom: 15px 
 			@media (max-width: 575px)
 				margin: 0 auto 15px
@@ -48,6 +76,11 @@
 			img
 				display: block
 				max-width: 100% 
+				
+		img
+			display: block
+			max-width: 100% 
+			margin: 0 auto
 				
 			
 		h1
@@ -73,13 +106,32 @@
 				font-size: 16px
 			
 		p
-			&:not(:last-child)
-				margin-bottom: 1em 
+			margin-bottom: 1em 
 				
 
 		.price-widgets
 			padding: 15px 0
 			
+
+	&.dark
+		.bonus-offer,
+		.signup-form
+			background-color: rgba(0, 0, 0, .8)
+			color: #fff 
+			
+
+		.signup-form
+			.form-group--checkbox .form-control:checked+label i
+				border-color: #fff
+				background-image: url(../images/check-white.svg) 
+				
+
+		.price-widgets
+			.widget
+			
+				&-column
+					&:after
+						background-color: #424242 
 
 
 
